# fileprocessing_task

./: README.md  docker-compose.yml  pyproject.toml
file_processing_task/: core.py  dag.py
